# pyMakeRetrieval

./: .gitignore  .pylintrc  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  makeRetCore.py  make_ret_all.py  plotting.py  pyproject.toml  ret.py  ret_meta_nc.py  setup.py  utils.py
.github/workflows/: python-package.yml
configs/: config_hpt.yaml  config_iwv.yaml  config_lwp.yaml  config_tbx.yaml  config_tpb.yaml  config_tpt.yaml  general_config.yaml  ret_specs.yaml
output/AND/: hpt_AND_no_surf_90.nc  iwv_AND_no_surf_90.nc  lwp_AND_no_surf_90.nc  tpb_AND_no_surf_7-10.nc  tpt_AND_no_surf_90.nc  tpt_AND_no_surf_90_alt.nc
output/NMY/: hpt_NMY_no_surf_90.nc  iwv_NMY_no_surf_90.nc  lwp_NMY_no_surf_90.nc  tbx_NMY_no_surf_90_00.nc  tbx_NMY_no_surf_90_01.nc  tbx_NMY_no_surf_90_02.nc  tbx_NMY_no_surf_90_03.nc  tbx_NMY_no_surf_90_04.nc  tbx_NMY_no_surf_90_05.nc  tbx_NMY_no_surf_90_06.nc  tbx_NMY_no_surf_90_07.nc  tbx_NMY_no_surf_90_08.nc  tbx_NMY_no_surf_90_09.nc  tbx_NMY_no_surf_90_10.nc  tbx_NMY_no_surf_90_11.nc  tbx_NMY_no_surf_90_12.nc  tbx_NMY_no_surf_90_13.nc  tpb_NMY_no_surf_7-10.nc  tpt_NMY_no_surf_90.nc
output/RAO/: hpt_RAO_no_surf_90.nc  iwv_RAO_no_surf_90.nc  lwp_RAO_no_surf_1-chan_48.nc  lwp_RAO_no_surf_1-chan_90.nc  lwp_RAO_no_surf_1-chan_RS_48.nc  lwp_RAO_no_surf_48.nc  lwp_RAO_no_surf_90.nc  lwp_sc_RAO_no_surf_90.nc  tbx_RAO_no_surf_114_00.nc  tbx_RAO_no_surf_114_01.nc  tbx_RAO_no_surf_114_02.nc  (+156 more)
py_make_retrieval/: __init__.py  cli.py  make_ret_all.py  make_ret_core.py  plotting.py  ret.py  ret_meta_nc.py  utils.py  version.py
(+155 files in other folders)
