[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMaekRetrieval"
version = "0.0.1"
authors = [
  { name="Andreas Foth", email="author@example.com" },
]
description = "Python package for making microwave radiometer retrievals"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/remsens-lim/pyMakeRetrieval"
"Bug Tracker" = "https://github.com/remsens-lim/pyMakeRetrieval/issues"